# Sanitizer

./: .gitattributes  .gitignore  README.md  buzz-sanitizer-spec.md  cloak-design-revision-v2.md  cloak-implementation-brief-for-claude-code.md  cloak-implementation-plan.md  cloak-test-fit-prompt.md  cloak-usability-walkthrough-prompt.md  cloak-ux-critique-and-direction.md  cloak-ux-design-brief.md  sanitizer-design-revision-v2.md  sanitizer-implementation-brief-for-claude-code.md  sanitizer-implementation-plan.md  sanitizer-test-fit-prompt.md  sanitizer-usability-walkthrough-prompt.md  sanitizer-ux-critique-and-direction.md  sanitizer-ux-design-brief.md
cloak/: DEV_NOTES.md  README.md  plugin.py  pyproject.toml
cloak/_vendor/: README.md
cloak/cloak_core/: __init__.py  appstate.py  declared_store.py  model.py  persistence.py  placeholders.py  restore.py  sanitizer.py  transcript.py  vault.py  verify.py
cloak/cloak_core/detectors/: __init__.py  base.py  declared.py  pii.py  suggest.py
cloak/cloak_core/formats/: __init__.py  base.py  markdown.py
cloak/cloak_core/tests/: appstate_test.py  boundary_test.py  categories_test.py  conftest.py  declared_store_test.py  declared_test.py  extensibility_test.py  formats_test.py  guarantees_test.py  persistence_test.py  (+10 more)
cloak/cloak_host/: __init__.py  demo_window.py  i18n.py  menu.py  model_provider_buzz.py  paths.py  pipeline.py  review_window.py
cloak/tests/: conftest.py  demo_window_test.py  menu_test.py  model_provider_buzz_test.py  packaging_test.py  pipeline_test.py  plugin_load_test.py  review_window_test.py
(+76 files in other folders)
