# Tooling configuration for the Cloak plugin (dev-only; excluded from the zip).
#
# Cloak is distributed as a plain plugin folder, not a built package, so there is
# deliberately no [project] or [build-system] table here. This file exists only
# to pin lint/format conventions (ruff + ruff-format, matching the Buzz host).

[tool.ruff]
line-length = 88
target-version = "py312"  # Cloak runs inside Buzz's Python 3.12 environment
extend-exclude = ["dist"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear, C4 comprehensions.
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.ruff.format]
quote-style = "double"
